--- a/events.html
+++ b/events.html
@@ -63,12 +63,12 @@
         <h2>INNOVATE INDIA</h2>
         <h5 style="text-align: center;"><b>"The true sign of intelligence is not knowledge but Imagination"</b></h5>
         <div class="d-flex justify-content-center">
-        <a href="https://bit.ly/32XW8Y3" target="_blank"><button type="button" class="btn btn-success ">Register Now</button></a></div><br>
+        <a href="http://bit.ly/INNOVATEINDIA" target="_blank"><button type="button" class="btn btn-success ">Register Now</button></a></div><br>
         <p>True Engineers not only focuses on getting knowledge, they develop a creative mindset which helps them to focus 
         more on application-oriented ideology. Knowledge without application is like food with out nutrition. 
         To bring out the hidden creative thoughts in you we <strong>“The Team Induce”</strong> Coming up with a great event named 
        <strong>“Innovate India... idea battlefield”</strong>.</p>
-       <img  class="rounded img-fluid  mx-auto d-block img-thumbnail" src="assets/img/car7.jpg"><br>
+       <img  class="rounded img-fluid  mx-auto d-block img-thumbnail" src="assets/img/car7.jpeg"><br>
         <b>Event description:</b>
         <p>
           Our event named “Innovate India... idea battlefield” has two rounds. </p>
