--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
      <ol class="carousel-indicators">
      </ol>
     <div class="carousel-inner">
+      <div class="carousel-item active">
+        <a href="events.html#inn"><img src="assets/img/car7.jpeg" class="d-block w-100" alt="..."></a>
+      </div>
       <div class="carousel-item ">
         <img src="assets/img/car6.jpg"  class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item active">
-        <a href="events.html#inn"><img src="assets/img/car7.jpg" class="d-block w-100" alt="..."></a>
       </div>
       <div class="carousel-item ">
         <img src="assets/img/car4.jpg" class="d-block w-100" alt="...">
