--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
               </ul>
               <li class="drop-down "><a  href="events.html"><i class="fa fa-calendar fa-lg"aria-hidden="true"></i>&ensp;Events</a>
               <ul>
-                <li><a href="events.html#inn">Innovate India</a></li>
-                <li><a href="events.html">Milestone</a></li>
+                <li><a href="events.html">Innovate India</a></li>
+                <li><a href="events.html#Milestone">Milestone</a></li>
                 <li><a href="events.html#Ispeak">Ispeak</a></li>
                 
               </ul>
