--- a/events.html
+++ b/events.html
@@ -68,7 +68,7 @@
         more on application-oriented ideology. Knowledge without application is like food with out nutrition. 
         To bring out the hidden creative thoughts in you we <strong>“The Team Induce”</strong> Coming up with a great event named 
        <strong>“Innovate India... idea battlefield”</strong>.</p>
-       <img  class="rounded img-fluid  mx-auto d-block img-thumbnail" src="assets/img/car7.jpeg"><br>
+       <img  class="rounded img-fluid  mx-auto d-block img-thumbnail" style="width: 510px" src="assets/img/car7.jpeg"><br>
         <b>Event description:</b>
         <p>
           Our event named “Innovate India... idea battlefield” has two rounds. </p>
