--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           <div class=" col-md-4" style=" margin-left: auto;
           margin-right: auto;">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <img src="assets/img/team-1.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/team-1.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Sai Raj Ramdeni</h4>
@@ -180,7 +180,7 @@
           <div class=" col-md-4" style=" margin-left: auto;
                  margin-right: auto;">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
-              <img src="assets/img/team-3.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/team-2.png" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Rakesh kumar CH</h4>
@@ -192,7 +192,7 @@
           <div class=" col-md-4" style=" margin-left: auto;
           margin-right: auto;">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
-              <img src="assets/img/team-2.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/team-3.png" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Sushanth Mamidoju</h4>
@@ -204,7 +204,7 @@
           <div class=" col-md-4" style=" margin-left: auto;
                   margin-right: auto;">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
-              <img src="assets/img/team-5.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/team-4.png" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Bhanu Prakash Kyatham</h4>  
@@ -216,7 +216,7 @@
           <div class=" col-md-4" style=" margin-left: auto;
               margin-right: auto;">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
-              <img src="assets/img/team-4.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/team-5.png" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Murali Krishna</h4>  
