--- a/index.html
+++ b/index.html
@@ -167,61 +167,51 @@
         <div class="row" >
           <div class=" col-md-4" style=" margin-left: auto;
           margin-right: auto;">
-            <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <img src="assets/img/team-1.jpg" class="img-fluid" alt="">
-              <div class="member-info">
-                <div class="member-info-content">
-                  <h4>Sai Raj Ramdeni</h4>
-                  <h4>- Chief Executive Officer</h4>
-                </div>
+            <div class="member" data-aos="fade-up" data-aos-delay="100"style="background-color: white;">
+              <img src="assets/img/team-10.png" class="img-fluid" alt="">
+              <div >
+                  <h4 style="color: black;">Sai Raj Ramdeni</h4>
+                  <h6 style="color: black;">CEO and Cheaf Executive lead</h6>
               </div>
             </div>
           </div>
           <div class=" col-md-4" style=" margin-left: auto;
                  margin-right: auto;">
-            <div class="member" data-aos="fade-up" data-aos-delay="300">
-              <img src="assets/img/team-2.png" class="img-fluid" alt="">
-              <div class="member-info">
-                <div class="member-info-content">
-                  <h4>Rakesh kumar CH</h4>
-                  <h4>- Chief Marketing officer</h4>   
-                </div>
+            <div class="member" data-aos="fade-up" data-aos-delay="300"style="background-color: white;">
+              <img src="assets/img/team-9.png" class="img-fluid" alt="">
+              <div >
+                <h4 style="color: black;">Rakesh kumar CH</h4>
+                <h6 style="color: black;">Chief Marketing officer</h6>
               </div>
             </div>
           </div>
           <div class=" col-md-4" style=" margin-left: auto;
           margin-right: auto;">
-            <div class="member" data-aos="fade-up" data-aos-delay="200">
-              <img src="assets/img/team-3.png" class="img-fluid" alt="">
-              <div class="member-info">
-                <div class="member-info-content">
-                  <h4>Sushanth Mamidoju</h4>
-                  <h4>- Chief Designing Officer</h4> 
-                </div>
+            <div class="member" data-aos="fade-up" data-aos-delay="200"style="background-color: white;">
+              <img src="assets/img/team-8.png" class="img-fluid" alt="">
+              <div >
+                <h4 style="color: black;">Sushanth Mamidoju</h4>
+                <h6 style="color: black;">Chief Designing Officer</h6>
               </div>
             </div>
           </div>
           <div class=" col-md-4" style=" margin-left: auto;
                   margin-right: auto;">
-            <div class="member" data-aos="fade-up" data-aos-delay="200">
-              <img src="assets/img/team-4.png" class="img-fluid" alt="">
-              <div class="member-info">
-                <div class="member-info-content">
-                  <h4>Bhanu Prakash Kyatham</h4>  
-                  <h4>- Chief External Affairs officer</h4>  
-                </div>
+            <div class="member" data-aos="fade-up" data-aos-delay="200"style="background-color: white;">
+              <img src="assets/img/team-7.png" class="img-fluid" alt="">
+              <div >
+                <h4 style="color: black;">Bhanu Prakash Kyatham</h4>
+                <h6 style="color: black;">Chief External Affairs officer</h6>
               </div>
             </div>
           </div>
           <div class=" col-md-4" style=" margin-left: auto;
               margin-right: auto;">
-            <div class="member" data-aos="fade-up" data-aos-delay="200">
-              <img src="assets/img/team-5.png" class="img-fluid" alt="">
-              <div class="member-info">
-                <div class="member-info-content">
-                  <h4>Murali Krishna</h4>  
-                  <h4>- Chief Financial Officer</h4>  
-                </div>
+            <div class="member" data-aos="fade-up" data-aos-delay="200"style="background-color: white;">
+              <img src="assets/img/team-6.png" class="img-fluid" alt="">
+              <div >
+                <h4 style="color: black;">Murali Krishna</h4>
+                <h6 style="color: black;">Chief Financial Officer</h6>
               </div>
             </div>
           </div>
