--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
               <img src="assets/img/team-10.png" class="img-fluid" alt="">
               <div >
                   <h4 style="color: black;">Sai Raj Ramdeni</h4>
-                  <h6 style="color: black;">CEO and Cheaf Executive lead</h6>
+                  <h6 style="color: black;">CEO and Executive lead</h6>
               </div>
             </div>
           </div>
