--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
               <img src="assets/img/team-10.png" class="img-fluid" alt="">
               <div >
                   <h4 style="color: black;">Sai Raj Ramdeni</h4>
-                  <h6 style="color: black;">CEO and Executive lead</h6>
+                  <p style="color:  #13a456;">CEO and Executive lead</p>
               </div>
             </div>
           </div>
@@ -181,7 +181,7 @@
               <img src="assets/img/team-9.png" class="img-fluid" alt="">
               <div >
                 <h4 style="color: black;">Rakesh kumar CH</h4>
-                <h6 style="color: black;">Chief Marketing officer</h6>
+                <p style="color: #13a456;">Chief Marketing officer</p>
               </div>
             </div>
           </div>
@@ -191,7 +191,7 @@
               <img src="assets/img/team-8.png" class="img-fluid" alt="">
               <div >
                 <h4 style="color: black;">Sushanth Mamidoju</h4>
-                <h6 style="color: black;">Chief Designing Officer</h6>
+                <p style="color:  #13a456;">Chief Designing Officer</p>
               </div>
             </div>
           </div>
@@ -201,7 +201,7 @@
               <img src="assets/img/team-7.png" class="img-fluid" alt="">
               <div >
                 <h4 style="color: black;">Bhanu Prakash Kyatham</h4>
-                <h6 style="color: black;">Chief External Affairs officer</h6>
+                <p style="color: #13a456;">Chief External Affairs officer</p>
               </div>
             </div>
           </div>
@@ -211,7 +211,7 @@
               <img src="assets/img/team-6.png" class="img-fluid" alt="">
               <div >
                 <h4 style="color: black;">Murali Krishna</h4>
-                <h6 style="color: black;">Chief Financial Officer</h6>
+                <p style="color: #13a456;">Chief Financial Officer</p>
               </div>
             </div>
           </div>
