--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
             <div class="member" data-aos="fade-up" data-aos-delay="100"style="background-color: white;">
               <img src="assets/img/team-10.png" class="img-fluid" alt="">
               <div >
-                  <h4 style="color: black;">Sai Raj Ramdeni</h4>
-                  <p style="color:  #13a456;">CEO and Executive lead</p>
+                  <h4 style="color: black;"data-aos="fade-left">Sai Raj Ramdeni</h4>
+                  <p style="color:  #13a456;"data-aos="fade-right">CEO and Executive lead</p>
               </div>
             </div>
           </div>
@@ -180,8 +180,8 @@
             <div class="member" data-aos="fade-up" data-aos-delay="300"style="background-color: white;">
               <img src="assets/img/team-9.png" class="img-fluid" alt="">
               <div >
-                <h4 style="color: black;">Rakesh kumar CH</h4>
-                <p style="color: #13a456;">Chief Marketing officer</p>
+                <h4 style="color: black;"data-aos="fade-left">Rakesh kumar CH</h4>
+                <p style="color: #13a456;"data-aos="fade-right">Chief Marketing officer</p>
               </div>
             </div>
           </div>
@@ -190,8 +190,8 @@
             <div class="member" data-aos="fade-up" data-aos-delay="200"style="background-color: white;">
               <img src="assets/img/team-8.png" class="img-fluid" alt="">
               <div >
-                <h4 style="color: black;">Sushanth Mamidoju</h4>
-                <p style="color:  #13a456;">Chief Designing Officer</p>
+                <h4 style="color: black;"data-aos="fade-left">Sushanth Mamidoju</h4>
+                <p style="color:  #13a456;"data-aos="fade-right">Chief Designing Officer</p>
               </div>
             </div>
           </div>
@@ -200,8 +200,8 @@
             <div class="member" data-aos="fade-up" data-aos-delay="200"style="background-color: white;">
               <img src="assets/img/team-7.png" class="img-fluid" alt="">
               <div >
-                <h4 style="color: black;">Bhanu Prakash Kyatham</h4>
-                <p style="color: #13a456;">Chief External Affairs officer</p>
+                <h4 style="color: black;"data-aos="fade-left">Bhanu Prakash Kyatham</h4>
+                <p style="color: #13a456;"data-aos="fade-right">Chief External Affairs officer</p>
               </div>
             </div>
           </div>
@@ -210,8 +210,8 @@
             <div class="member" data-aos="fade-up" data-aos-delay="200"style="background-color: white;">
               <img src="assets/img/team-6.png" class="img-fluid" alt="">
               <div >
-                <h4 style="color: black;">Murali Krishna</h4>
-                <p style="color: #13a456;">Chief Financial Officer</p>
+                <h4 style="color: black;"data-aos="fade-left">Murali Krishna</h4>
+                <p style="color: #13a456;"data-aos="fade-right">Chief Financial Officer</p>
               </div>
             </div>
           </div>
