--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   </header>
   <section id="hero" style="background-image: url(assets/img/bga2.jpg); " class="d-flex flex-column justify-content-center ">
   
-    <div  class="hero-container" style="padding-left: 10%;">
+    <div  class="hero-container" style="padding-left: 10%;"data-aos="fade-left">
       <h1 style="color: white;">-INDUCE-</h1>
       <h1><em>
         <span
@@ -80,7 +80,7 @@
    <h3 style="text-align: center;color: black;padding-top: 3%;"> 
     <b>UPDATES</b>
    </h3>
-   <section id="car">
+   <section id="car"data-aos="fade-left">
     <div id="introCarousel" class="carousel slide" data-ride="carousel">
      <ol class="carousel-indicators">
      </ol>
@@ -118,7 +118,7 @@
             <P>A student community R&D certified under <SPAn style=" font-weight: bold;">MSME-MINISTRY OF MICRO, SMALL & MEDIUM ENTERPRISE</SPAn></p>
         </header>
         <div class="row about-cols">
-          <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-md-4" data-aos="fade-right" data-aos-delay="100">
             <div class="about-col">
               <div class="img">
                 <img src="assets/img/about-mission.jpg" alt="" class="img-fluid">
@@ -142,7 +142,7 @@
               </p>
             </div>
           </div>
-          <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-md-4" data-aos="fade-left" data-aos-delay="300">
             <div class="about-col">
               <div class="img">
                 <img src="assets/img/about-vision.jpg" alt="" class="img-fluid">
