--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
    <h3 style="text-align: center;color: black;padding-top: 3%;"> 
     <b>UPDATES</b>
    </h3>
-   <section id="car"data-aos="fade-left">
+   <section id="car">
     <div id="introCarousel" class="carousel slide" data-ride="carousel">
      <ol class="carousel-indicators">
      </ol>
