--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   </header>
   <section id="hero" style="background-image: url(assets/img/bga2.jpg); " class="d-flex flex-column justify-content-center ">
   
-    <div  class="hero-container" style="padding-left: 10%;"data-aos="fade-left">
+    <div  class="hero-container" style="padding-left: 10%;">
       <h1 style="color: white;">-INDUCE-</h1>
       <h1><em>
         <span
