--- a/about.html
+++ b/about.html
@@ -142,6 +142,7 @@
                  </button>
              </div>
                <div class="modal-body">
+                 <input>
                  password
                </div>
              <div class="modal-footer">
