--- a/about.html
+++ b/about.html
@@ -42,19 +42,21 @@
               <ul>
                 <li><a href="explore.html">Articles</a></li>
               </ul>
-              <li class="drop-down"><a href="events.html"><i class="fa fa-calendar fa-lg"aria-hidden="true"></i>&ensp;Events</a>
+              <li class="drop-down"><a href="events.html"><i class="fa fa-calendar "aria-hidden="true"></i>&ensp;Events</a>
               <ul>
                 <li><a href="events.html">Innovate India</a></li>
                 <li><a href="events.html#Milestone">Milestone</a></li>
                 <li><a href="events.html#Ispeak">Ispeak</a></li>
                 
               </ul>
+              <li><a data-toggle="modal" data-target="#exampleModal"><i class="fa fa-sign-in fa-lg"></i>&ensp;signin</a>
             </ul>
           </nav>
         </div>
       </div>
     </div>
   </header>
+  
   <section class="jumbotron " id="imgtop" style="background-position: center;background-image: url(assets/img/about4.png); ">
     <h1 style="color: white;text-align: center;" ><br>&ensp;<br>&ensp;</h1>
   </section>
@@ -98,61 +100,6 @@
     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
       <div class="card-body">
       	A Program Manager is like a doctor who leads the trauma team and decides the course of action for a patient - both at the same time. Without the right kind of authority to efficiently handle all the project management issues, development teams can easily get into trouble. 
-      <!-- Button trigger modal -->
-      <br>
-  <section class="container">
-       <b>name1</b>
-      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop"style="float:right;" >
-        <i class="fa fa-download fa-lg" aria-hidden="true"></i>&ensp; ID card
-      </button><br>
-
-      <!-- Modal -->
-      <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="staticBackdropLabel">login</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-              <div class="modal-body">
-                password
-              </div>
-            <div class="modal-footer">
-               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-               <button type="button" class="btn btn-primary">login</button>
-            </div>
-          </div>
-        </div>
-      </div><br>
-        <b>name2</b>
-       <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop"style="float:right;" >
-         <i class="fa fa-download fa-lg" aria-hidden="true"></i>&ensp; ID card
-       </button><br>
- 
-       <!-- Modal -->
-       <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-         <div class="modal-dialog">
-           <div class="modal-content">
-             <div class="modal-header">
-               <h5 class="modal-title" id="staticBackdropLabel">login</h5>
-                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                   <span aria-hidden="true">&times;</span>
-                 </button>
-             </div>
-               <div class="modal-body">
-                 <input>
-                 password
-               </div>
-             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">login</button>
-             </div>
-           </div>
-         </div>
-       </div>
-  </section>
       </div>
     </div>
   </div>
