--- a/explore.html
+++ b/explore.html
@@ -51,19 +51,21 @@
               <ul>
                 <li><a href="explore.html">Articles</a></li>
               </ul>
-              <li class="drop-down"><a href="events.html"><i class="fa fa-calendar fa-lg"aria-hidden="true"></i>&ensp;Events</a>
+              <li class="drop-down"><a href="events.html"><i class="fa fa-calendar "aria-hidden="true"></i>&ensp;Events</a>
               <ul>
                 <li><a href="events.html">Innovate India</a></li>
                 <li><a href="events.html#Milestone">Milestone</a></li>
                 <li><a href="events.html#Ispeak">Ispeak</a></li>
                
               </ul>
+              <li><a data-toggle="modal" data-target="#exampleModal"><i class="fa fa-sign-in fa-lg"></i>&ensp;signin</a>
             </ul>
           </nav>
         </div>
       </div>
     </div>
   </header>
+  
   <section class="jumbotron" id="imgtop" style="background-position: center;background-image: url(assets/img/explor4.png);"   >
     <h1 style="text-align: center;color: white;" ><br>&ensp;<br>&ensp;</h1>
   </section>
