--- a/explore.html
+++ b/explore.html
@@ -58,7 +58,7 @@
                 <li><a href="events.html#Ispeak">Ispeak</a></li>
                
               </ul>
-              <li><a data-toggle="modal" data-target="#exampleModal"><i class="fa fa-sign-in fa-lg"></i>&ensp;signin</a>
+              <li><a href="login.html" ><i class="fa fa-sign-in fa-lg"></i>&ensp;login</a>
             </ul>
           </nav>
         </div>
