--- a/events.html
+++ b/events.html
@@ -64,8 +64,8 @@
       <section id="inn" class="container" style="color: #000;">
         <h2>INNOVATE INDIA</h2>
         <h5 style="text-align: center;"><b>"The true sign of intelligence is not knowledge but Imagination"</b></h5>
-        <div class="d-flex justify-content-center">
-        <a href="http://bit.ly/INNOVATEINDIA" target="_blank"><button type="button" class="btn btn-success ">Register Now</button></a></div><br>
+        <!-- <div class="d-flex justify-content-center">
+        <a href="http://bit.ly/INNOVATEINDIA" target="_blank"><button type="button" class="btn btn-success ">Register Now</button></a></div> --><br>
         <p>True Engineers not only focuses on getting knowledge, they develop a creative mindset which helps them to focus 
         more on application-oriented ideology. Knowledge without application is like food with out nutrition. 
         To bring out the hidden creative thoughts in you we <strong>“The Team Induce”</strong> Coming up with a great event named 
@@ -85,6 +85,21 @@
           Great opportunity is waiting for all of you. Utilize this and bring out the innovators in you. Wining or losing doesn’t matters. The thing which matters is your participation and efforts. This is a golden opportunity to give shape to your extraordinary ideas. Don’t miss it. Stay tuned for more updates. 
           Team Induce wishes you all a very good luck. We are excited to meet you all in the event. 
           </p>
+          <b id="res">Result:</b>
+          <p>Hello everyone!
+We congratulate all the participants for taking part in our event <b>Innovate India</b>. Whether to win or lose is not predicted but gaining of experience for having a great future is sure.
+So never give up!<br>
+
+<i>" Dream a dream for our brighter nation & make others to dream about your dream".</i><br>
+Jai Hind</p>
+          <div style="display: flex;justify-content: center;">
+       	<div id="oth" class="col-md-5 "><img class="img-fluid img-thumbnail"  src="./assets/img/mentorship.gif"></div>
+       	<div id="oth" class="col-md-5 "><img class="img-fluid img-thumbnail"  src="./assets/img/internship.gif"></div>
+      </div>
+      <div id="mob">
+       	<div><img class="img-fluid img-thumbnail"  src="./assets/img/mentorship.gif"></div>
+       	<div><img class="img-fluid img-thumbnail" src="./assets/img/internship.gif"></div>
+      </div>
       </section><hr>
       <section id="Milestone" class="container" style="color: #000;"><h2 class="" >MILESTONE</h2>
         <p >
