--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
      </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
+        <a href="events.html#res"><img src="assets/img/result.jpg" class="d-block w-100" alt="..."></a>
+      </div>
+      <div class="carousel-item">
         <a href="events.html#inn"><img src="assets/img/car7.jpeg" class="d-block w-100" alt="..."></a>
       </div>
       <div class="carousel-item ">
