--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<link rel="stylesheet" href="css/fixed.css">
 </head>
 <body>
-	<a href="index.html">
+	<a href="induce.html">
 <nav class="navbar navbar-dark fixed-top">
-	<a class="navbar-brand mx-auto" href="index.html"><i>click here &ensp;</i><img src="assets/img/img-1.png"> INDUCE</a>
+	<a class="navbar-brand mx-auto" href="induce.html"><i>click here &ensp;</i><img src="assets/img/img-1.png"> INDUCE</a>
 </nav></a>
 <div class="video-background">
   <div class="video-wrap">
