--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<a href="induce.html">
 <nav class="navbar navbar-dark fixed-top">
-	<a class="navbar-brand mx-auto" href="induce.html"><i>click here &ensp;</i><img src="assets/img/img-1.png"> INDUCE</a>
+	<a class="navbar-brand mx-auto" href="induce.html"><i>click here for &ensp;</i><img src="assets/img/img-1.png"> INDUCE</a>
 </nav></a>
 <div class="video-background">
   <div class="video-wrap">
