--- a/index.html
+++ b/index.html
@@ -101,6 +101,17 @@
      
     </div>
    </section>
+   <section id="diwali" >
+   	<video class="diwalivideo" style="margin-top:10px;" muted controls autoplay loop>
+      <source  src="./assets/img/diwali.mp4" type=video/mp4>
+      <source  src="./assets/img/diwali.ogv" type=video/ogv>
+    </video>
+   </section>
+   <!-- <section style="color: #000;"class="container" >
+      <div class="embed-responsive  mx-auto d-block embed-responsive-16by9" style="width:75%;height: 30%;margin-top:20px">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/obaWB9PDr60?autoplay=1&mute=1&loop=1" allowfullscreen></iframe>
+      </div>
+    </section> -->
    <h3 style="text-align: center;color: black;padding-top: 3%;"> 
     <b>UPDATES</b>
    </h3>
