--- a/index.html
+++ b/index.html
@@ -79,6 +79,14 @@
      
     </div>
    </section>
+   
+   <section id="diwali" >
+    <video class="diwalivideo" style="margin-top:10px;" muted controls autoplay loop>
+      <source  src="./assets/img/diwali.mp4" type=video/mp4>
+      <source  src="./assets/img/diwali.ogv" type=video/ogv>
+    </video>
+   </section>
+
    <h3 style="text-align: center;color: black;padding-top: 3%;"> 
     <b>UPDATES</b>
    </h3>
