--- a/index.html
+++ b/index.html
@@ -95,6 +95,21 @@
      </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
+        <img src="assets/img/R&D/main.jpeg"  class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item ">
+        <img src="assets/img/R&D/sub1.jpeg"  class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item ">
+        <img src="assets/img/R&D/sub2.jpeg"  class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item ">
+        <img src="assets/img/R&D/sub3.jpeg"  class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item ">
+        <img src="assets/img/R&D/sub4.jpeg"  class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
         <a href="events.html#res"><img src="assets/img/result.jpg" class="d-block w-100" alt="..."></a>
       </div>
       <div class="carousel-item">
