--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <li><a href="events.html#Milestone">Milestone</a></li>
                 <li><a href="events.html#Ispeak">Ispeak</a></li>
               </ul>
-              <li><a href="login.html" ><i class="fa fa-sign-in fa-lg"></i>&ensp;log in</a>
+              <li><a href="login.html" ><i class="fa fa-sign-in fa-lg"></i>&ensp;login</a>
             </ul>
           </nav>
         </div>
@@ -67,7 +67,7 @@
   <section id="hero" style="background-image: url(assets/img/bga2.jpg); " class="d-flex flex-column justify-content-center ">
   
     <div  class="hero-container" style="padding-left: 10%;">
-      <h1 style="color: white;">-INDUCE-</h1>
+      <h1 style="color: white;">-TeamINDUCE-</h1>
       <h1><em>
         <span
            class="txt-rotate "
