--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
               <li class="active"><a href="index.html"><span class="fa fa-home fa-lg"></span>&ensp;Home</a></li>
               <li class="drop-down "><a  href="about.html"><i class="fa fa-info-circle fa-lg"></i>&ensp;About</a>
               <ul>
-                <li><a href="about.html">Induce</a></li>
+                <li><a href="about.html">TeamInduce</a></li>
                 <li><a href="about.html#Ourjourney">Our Journey</a></li>
                 <li><a href="about.html#RD">R&D</a></li>
                 <li><a href="about.html#departments">Departments</a></li>
-              </ul>
+              </ul></li>
               <li class="drop-down "><a href="explore.html"><i class="fa fa-puzzle-piece fa-lg"aria-hidden="true "></i>&ensp;Explore</a>
               <ul>
                 <li><a href="explore.html">Articles</a></li>
@@ -56,8 +56,8 @@
                 <li><a href="events.html">Innovate India</a></li>
                 <li><a href="events.html#Milestone">Milestone</a></li>
                 <li><a href="events.html#Ispeak">Ispeak</a></li>
-              </ul>
-              <li><a href="login.html" ><i class="fa fa-sign-in fa-lg"></i>&ensp;login</a>
+              </ul></li>
+              <li><a href="login.html" ><i class="fa fa-sign-in fa-lg"></i>&ensp;login</a></li>
             </ul>
           </nav>
         </div>
