--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <li class="active"><a href="index.html"><span class="fa fa-home fa-lg"></span>&ensp;Home</a></li>
               <li class="drop-down "><a  href="about.html"><i class="fa fa-info-circle fa-lg"></i>&ensp;About</a>
               <ul>
-                <li><a href="about.html">TeamInduce</a></li>
+                <li><a href="about.html">Induce</a></li>
                 <li><a href="about.html#Ourjourney">Our Journey</a></li>
                 <li><a href="about.html#RD">R&D</a></li>
                 <li><a href="about.html#departments">Departments</a></li>
@@ -67,7 +67,7 @@
   <section id="hero" style="background-image: url(assets/img/bga2.jpg); " class="d-flex flex-column justify-content-center ">
   
     <div  class="hero-container" style="padding-left: 10%;">
-      <h1 style="color: white;">-INDUCE-</h1>
+      <h1 style="color: white;">-Team INDUCE-</h1>
       <h1><em>
         <span
            class="txt-rotate "
