--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <section id="hero" style="background-image: url(assets/img/bga2.jpg); " class="d-flex flex-column justify-content-center ">
   
     <div  class="hero-container" style="padding-left: 10%;">
-      <h1 style="color: white;">-Team INDUCE-</h1>
+      <h1 style="color: white;">-INDUCE-</h1>
       <h1><em>
         <span
            class="txt-rotate "
