--- a/events.html
+++ b/events.html
@@ -132,10 +132,31 @@ Jai Hind</p>
           towards Innovation. It is an two way interaction event where everyone gets chance to have a conversation with him/her. 
           It is a platform for all to share one's ideas & thoughts to make ur dreams more stronger. 
         </p>
-        <img  class="rounded img-fluid  mx-auto d-block img-thumbnail" src="assets/img/ispeak.jpeg">
+        <img  class="rounded img-fluid  mx-auto d-block img-thumbnail" style="width:" src="assets/img/ispeak.jpeg">
         <p>
           We believe " Innovation dont require Education but Innovation require Knowledge ".
           Be part of our event to add something to your extent of Knowledge.
+        </p>
+      </section>
+      <section class="container"  id="women" style="color: black">
+      <h2  >Shree parichai</h2>
+        <p>
+          On behalf of this INTERNATIONAL WOMEN'S DAY, Lets show our gratitude in bringing out the women who are nevertheless a man.....
+
+Approach a woman who is truly special in your personal life in any aspect !
+
+Tell us why they are particularly your favourite & also add points related to her hidden talent which we need to  bring out.
+
+
+Make a short real description why she is so special in your journey to show everyone that Woman is nevertheless of  a Man!
+
+Send the description to teaminducers@gmail.com 
+
+Make sure you take all rights of the particular person, as it may be posted in social media handles.
+        </p>
+        <img  class="rounded img-fluid  mx-auto d-block img-thumbnail" style="width: 700px;align-content: center" src="assets/img/women.jpeg">
+        <p>
+          Lets join hand in hand to show our gratitude towards every WOMAN with a sincere regards on this WOMEN'S DAY
         </p>
       </section>
     </main>
