--- a/index.html
+++ b/index.html
@@ -93,8 +93,12 @@
     <div id="introCarousel" class="carousel slide" data-ride="carousel">
      <ol class="carousel-indicators">
      </ol>
-    <div class="carousel-inner">
+     <div class="carousel-inner">
       <div class="carousel-item active">
+       <a href="./events.html#women"> <img src="assets/img/women.jpeg" class="d-block w-100" alt="..."></a>
+      </div>
+    <div class="carousel-inner">
+      <div class="carousel-item">
         <img src="assets/img/R&D/main.jpeg"  class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item ">
