--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 <li><a href="events.html">Innovate India</a></li>
                 <li><a href="events.html#Milestone">Milestone</a></li>
                 <li><a href="events.html#Ispeak">Ispeak</a></li>
+                <li><a href="events.html#women">Shree parichai</a></li>
               </ul></li>
               <li><a href="login.html" ><i class="fa fa-sign-in fa-lg"></i>&ensp;login</a></li>
             </ul>
