--- a/events.html
+++ b/events.html
@@ -47,7 +47,7 @@
                 <li><a href="events.html">Innovate India</a></li>
                 <li><a href="events.html#Milestone">Milestone</a></li>
                 <li><a href="events.html#Ispeak">Ispeak</a></li>
-                
+                <li><a href="events.html#women">Shree parichai</a></li>
               </ul>
               <li><a href="login.html" ><i class="fa fa-sign-in fa-lg"></i>&ensp;login</a>
             </ul>
