--- a/index.html
+++ b/index.html
@@ -96,9 +96,11 @@
      </ol>
      <div class="carousel-inner">
       <div class="carousel-item active">
+        <a href="https://roboticelectronics.in/tech-blog/robot-operating-system-ros-workshop/"> <img src="assets/img/car8.jpeg" class="d-block w-100" alt="..."></a>
+       </div>
+      <div class="carousel-item">
        <a href="./events.html#women"> <img src="assets/img/women.jpeg" class="d-block w-100" alt="..."></a>
       </div>
-    <div class="carousel-inner">
       <div class="carousel-item">
         <img src="assets/img/R&D/main.jpeg"  class="d-block w-100" alt="...">
       </div>
@@ -123,7 +125,7 @@
       <div class="carousel-item">
         <a href="events.html#res"><img src="assets/img/result.jpg" class="d-block w-100" alt="..."></a>
       </div>
-      
+    
     </div>
      <a class="carousel-control-prev " href="#introCarousel" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true" id="carousel1"></span>
