--- a/events.html
+++ b/events.html
@@ -31,6 +31,7 @@
           <nav class="nav-menu d-none d-lg-block">
             <ul>
               <li><a href="index.html"><span class="fa fa-home fa-lg"></span>&ensp;Home</a></li>
+              <li><a href="internships.html"><span class="fa fa-puzzle-piece fa-lg"></span>&ensp;internships</a></li>
               <li class="drop-down"><a href="about.html"><i class="fa fa-info fa-lg"></i>&ensp;About</a>
               <ul>
                 <li><a href="about.html">Induce</a></li>
@@ -132,7 +133,7 @@ Jai Hind</p>
           towards Innovation. It is an two way interaction event where everyone gets chance to have a conversation with him/her. 
           It is a platform for all to share one's ideas & thoughts to make ur dreams more stronger. 
         </p>
-        <img  class="rounded img-fluid  mx-auto d-block img-thumbnail" style="width:" src="assets/img/ispeak.jpeg">
+        <img  class="rounded img-fluid  mx-auto d-block img-thumbnail"  src="assets/img/ispeak.jpeg">
         <p>
           We believe " Innovation dont require Education but Innovation require Knowledge ".
           Be part of our event to add something to your extent of Knowledge.
