--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
          <!--<a href="index.html"><img src="assets/img/img-1.png"></a>-->
           <nav class="nav-menu d-none d-lg-block ">
             <ul >
+              
               <li class="active"><a href="index.html"><span class="fa fa-home fa-lg"></span>&ensp;Home</a></li>
+              <li><a href="internships.html"><span class="fa fa-puzzle-piece fa-lg"></span>&ensp;internships</a></li>
               <li class="drop-down "><a  href="about.html"><i class="fa fa-info-circle fa-lg"></i>&ensp;About</a>
               <ul>
                 <li><a href="about.html">Induce</a></li>
