--- a/internships.html
+++ b/internships.html
@@ -80,7 +80,7 @@
             <li>Internship certificate</li>
             <li>Letter of Recommendation</li>
             <li>Project oriented teaching</li>
-            <li>Technology at low cost</li>
+            <li>Technology orientation at low cost</li>
             <li>Pathway to best technical orientation</li>
             <br>
         <h3><b>Internship course structure</b></h3>
