--- a/internships.html
+++ b/internships.html
@@ -89,7 +89,7 @@
             <li>Internship Fee: INR 1950</li>
             <li>First come- First serve- Use EARLY BIRD coupon code for 15% discount</li>
             <br><br>
-        <div class="text-center"><a href="templates/home.html"><button type="button" class="btn btn-primary ">Register</button></a>
+        <div class="text-center"><a href="./templates/paymentgateway.html"><button type="button" class="btn btn-primary ">Register</button></a>
         </div><br><br>
       </section>
       
