--- a/internships.html
+++ b/internships.html
@@ -29,7 +29,7 @@
         <div class="col-xl-11 d-flex align-items-center">
           <h1 class="logo mr-auto"><a href="index.html">INDUCE</a></h1>
           <nav class="nav-menu d-none d-lg-block">
-            <ul>
+            <!-- <ul>
               <li><a href="index.html"><span class="fa fa-home fa-lg"></span>&ensp;Home</a></li>
               <li class="active "><a href="internships.html"><span class="fa fa-puzzle-piece fa-lg"></span>&ensp;internships</a></li>
               <li class="drop-down"><a href="about.html"><i class="fa fa-info fa-lg"></i>&ensp;About</a>
@@ -52,7 +52,7 @@
               </ul>
               <li><a href="login.html" ><i class="fa fa-sign-in fa-lg"></i>&ensp;login</a>
             </ul>
-          </nav>
+          </nav> -->
         </div>
       </div>
     </div>
@@ -89,7 +89,7 @@
             <li>Internship Fee: INR 1950</li>
             <li>First come- First serve- Use EARLY BIRD coupon code for 15% discount</li>
             <br><br>
-        <div class="text-center"><a href="./templates/paymentgateway.html"><button type="button" class="btn btn-primary ">Register</button></a>
+        <div class="text-center"><a href="./paymentgateway.html"><button type="button" class="btn btn-primary ">Register</button></a>
         </div><br><br>
       </section>
       
