--- a/index.html
+++ b/index.html
@@ -97,7 +97,10 @@
      <ol class="carousel-indicators">
      </ol>
      <div class="carousel-inner">
-      <div class="carousel-item active">
+        <div class="carousel-item active">
+        <a href="./internships.html"><img src="assets/img/iot.jpeg" class="d-block w-100" alt="..."></a>
+       </div>    
+      <div class="carousel-item">
         <a href="https://roboticelectronics.in/tech-blog/robot-operating-system-ros-workshop/"> <img src="assets/img/car8.jpeg" class="d-block w-100" alt="..."></a>
        </div>
       <div class="carousel-item">
