--- a/internships.html
+++ b/internships.html
@@ -64,12 +64,16 @@
     <main>
       <section id="inn" class="container" style="color: #000;">
        <h3><b>Incorporation of IoT with INDUCE</b></h3>
+
        <p>
         The internet of today is notably different than the internet of past decades. The internet of today is more than email, website pages, and document transfers between PCs. The advancing internet is turning into an Internet of Things (IoT). At this point of time no longer will the only devices accessing the internet be tablets, computers, and smartphones. The sensor-equipped, internet-ready, smart devices, automation devices of tomorrow will incorporate everything from automobiles and biomedical gadgets to domestic devices and natural ecosystems.
        </p>
        <p>      
         Keeping in view of future technology readiness in new aspiring engineers, we Team INDUCE incorporating TRANING cum INTERNSHIP program on Internet of Things.
        </p>
+
+        <div class="text-center"><a href="./paymentgateway.html"><button type="button" class="btn btn-success ">Register</button></a>
+        </div>
         <h3><b>INDUCE Internship Standards</b></h3>
         <p>
             Induce believes that Nurturing the better standards in students can be achieved by the capable and calibre trainers in the organizations, Our collaborators for this internship is IndEyes infotech Pvt Ltd. An ISO 9001:2015 certified company to meet the standards and requirements of the next generation engineers towards IoT.
@@ -89,8 +93,7 @@
             <li>Internship Fee: INR 1950</li>
             <li>First come- First serve- Use EARLY BIRD coupon code for 15% discount</li>
             <br><br>
-        <div class="text-center"><a href="./paymentgateway.html"><button type="button" class="btn btn-primary ">Register</button></a>
-        </div><br><br>
+       <br><br>
       </section>
       
     </main>
