--- a/internships.html
+++ b/internships.html
@@ -63,6 +63,7 @@
   </section>
     <main>
       <section id="inn" class="container" style="color: #000;">
+        <h2>Internships</h2>
        <h3><b>Incorporation of IoT with INDUCE</b></h3>
 
        <p>
