--- a/internships.html
+++ b/internships.html
@@ -63,8 +63,8 @@
   </section>
     <main>
       <section id="inn" class="container" style="color: #000;">
-        <h2>Internships</h2>
-       <h3><b>Incorporation of IoT with INDUCE</b></h3>
+        <h2><b style="font-weight: 700">Internships</b></h2>
+       <h3 style="font-weight: 500"><i>Incorporation of IoT with INDUCE</i></h3>
 
        <p>
         The internet of today is notably different than the internet of past decades. The internet of today is more than email, website pages, and document transfers between PCs. The advancing internet is turning into an Internet of Things (IoT). At this point of time no longer will the only devices accessing the internet be tablets, computers, and smartphones. The sensor-equipped, internet-ready, smart devices, automation devices of tomorrow will incorporate everything from automobiles and biomedical gadgets to domestic devices and natural ecosystems.
@@ -75,7 +75,7 @@
         <div class="text-center"><a href="./paymentgateway.html"><button type="button" class="btn btn-success ">Register</button></a>
         </div>
         <br></br>
-        <h3><b>INDUCE Internship Standards</b></h3>
+        <h3><b style="font-weight: 400"><i>INDUCE Internship Standards</i></b></h3>
         <p>
             Induce believes that Nurturing the better standards in students can be achieved by the capable and calibre trainers in the organizations, Our collaborators for this internship is IndEyes infotech Pvt Ltd. An ISO 9001:2015 certified company to meet the standards and requirements of the next generation engineers towards IoT.
         </p>
@@ -88,8 +88,8 @@
             <li>Technology orientation at low cost</li>
             <li>Pathway to best technical orientation</li>
             <br>
-        <h3><b>Internship course structure</b></h3>
-        <h3><b>Outline</b></h3>
+        <h3><b style="font-weight: 400"><i>Internship course structure</i></b></h3>
+        <h3><b style="font-weight: 400"><i>Outline</i></b></h3>
             <li>Internship Start date: 12 May 2021</li>
             <li>Internship Fee: INR 1950</li>
             <li>First come- First serve- Use EARLY BIRD coupon code for 15% discount</li>
