--- a/internships.html
+++ b/internships.html
@@ -72,8 +72,8 @@
        <p>      
         Keeping in view of future technology readiness in new aspiring engineers, we Team INDUCE incorporating TRANING cum INTERNSHIP program on Internet of Things.
        </p>
-        <div class="text-center"><a href="./paymentgateway.html"><button type="button" class="btn btn-success " style="width: 300px">Register</button></a>
-        </div>
+        <!-- <div class="text-center"><a href="./paymentgateway.html"><button type="button" class="btn btn-success " style="width: 300px">Register</button></a>
+        </div> -->
         <br></br>
         <h3><b style="font-weight: 400"><i>INDUCE Internship Standards</i></b></h3>
         <p>
