--- a/index.html
+++ b/index.html
@@ -97,7 +97,13 @@
      <ol class="carousel-indicators">
      </ol>
      <div class="carousel-inner">
-        <div class="carousel-item active">
+      <div class="carousel-item active">
+        <a href="./internships.html"><img src="assets/img/car1.jpeg" class="d-block w-100" alt="..."></a>
+       </div>
+       <div class="carousel-item ">
+        <a href="./internships.html"><img src="assets/img/car2.jpeg" class="d-block w-100" alt="..."></a>
+       </div>
+        <div class="carousel-item">
         <a href="./internships.html"><img src="assets/img/iot.jpeg" class="d-block w-100" alt="..."></a>
        </div>    
       <div class="carousel-item">
@@ -142,6 +148,11 @@
      </a>
     </div>
     </section>
+    <br>
+    <div>
+      <img src="assets/img/car3.jpeg" class="img-fluid rounded mx-auto d-block" alt="">
+    </div>
+    <br>
   <main id="main">
     <section id="about">
       <div class="container" data-aos="fade-up">
